--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img src="https://i.ibb.co/SsTFMnp/20210802-bbb.jpg" alt="odds" width=1065 height=260>
 </div>
 <div>
-  <img src="https://i.ibb.co/gm9PCsT/20210802-nba.jpg" alt="odds" width=738 height=330>
+  <img src="https://i.ibb.co/SsChn7q/20210209-nba.jpg" alt="odds" width=721 height=315>
 </div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
@@ -44,8 +44,8 @@
       <div class="button dropdown"> 
       <select id="esporteselectora">
          <option value="default_nenhum">Escolha uma linha</option>
-         <option value="wizards_bulls">Wizards X Bulls</option>
-         <option value="raptors_grizzlies">Raptors X Grizzlies</option>
+         <option value="warriors_spurs">Warriors X Spurs</option>
+         <option value="76ers_kings">76ers X Kings</option>
       </select>
     </div>
  </div> 
@@ -69,23 +69,23 @@
  </div>
  
  
-  <div id="wizards_bulls" class="colors blue"> 
+  <div id="warriors_spurs" class="colors blue"> 
     <div class="button dropdown"> 
     <select id="winnerselector2">
        <option value="default_nenhum">Escolha um vencedor</option>
-       <option value="wizards">Wizards (2.25)</option>
-       <option value="bulls">Bulls (1.68)</option>
+       <option value="warriors">Warriors (2.00)</option>
+       <option value="spurs">Spurs (1.83)</option>
     </select>
   </div>
 </div>
  
  
-  <div id="raptors_grizzlies" class="colors blue"> 
+  <div id="76ers_kings" class="colors blue"> 
     <div class="button dropdown"> 
     <select id="winnerselector3">
        <option value="default_nenhum">Escolha um vencedor</option>
-       <option value="raptors">Raptors (1.71)</option>
-       <option value="grizzlies">Grizzlies (2.20)</option>
+       <option value="76ers">76ers (1.55)</option>
+       <option value="kings">Kings (2.60)</option>
     </select>
   </div>
 </div>
@@ -106,11 +106,11 @@
   <div id="gilberto" class="prelim green">!bbb gilberto 200</div>
   <div id="juliette" class="prelim green">!bbb juliette 200</div>
   
-  <div id="wizards" class="prelim green">!wizards_bulls wizards 200</div>
-  <div id="bulls" class="prelim green">!wizards_bulls bulls 200</div>
+  <div id="warriors" class="prelim green">!warriors_spurs warriors 200</div>
+  <div id="spurs" class="prelim green">!warriors_spurs bulls spurs</div>
   
-  <div id="raptors" class="prelim green">!raptors_grizzlies raptors 200</div>
-  <div id="grizzlies" class="prelim green">!raptors_grizzlies grizzlies 200</div>
+  <div id="76ers" class="prelim green">!76ers_kings 76ers 200</div>
+  <div id="kings" class="prelim green">!76ers_kings kings 200</div>
   
 </div>
   
