--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <div id="juliette" class="prelim green">!bbb juliette 200</div>
   
   <div id="warriors" class="prelim green">!warriors_spurs warriors 200</div>
-  <div id="spurs" class="prelim green">!warriors_spurs bulls spurs</div>
+  <div id="spurs" class="prelim green">!warriors_spurs spurs 200</div>
   
   <div id="76ers" class="prelim green">!76ers_kings 76ers 200</div>
   <div id="kings" class="prelim green">!76ers_kings kings 200</div>
