--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <img src="https://i.ibb.co/k0cpphK/betting-bad-1.png" alt="odds" width=275 height=183>
 </div>
 <div>
-  <img src="https://i.ibb.co/Y8R29ZM/20210210-nba-2.jpg" alt="odds" width=886 height=602>
+  <img src="https://i.ibb.co/BK24b1B/20210213-ufc.jpg" alt="odds" width=1514 height=481>
 </div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
