--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <img src="https://i.ibb.co/k0cpphK/betting-bad-1.png" alt="odds" width=275 height=183>
 </div>
 <div>
-  <img src="https://i.ibb.co/hZ1QKb3/20210213-ufc-3.jpg" alt="odds" width=1475 height=420>
+  <img src="https://i.ibb.co/hZ1QKb3/20210213-ufc-3.jpg" alt="odds">
 </div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
