--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
 
   
-   <div id="esporteUFC" class="colors yellow"> 
+   <div id="esporteBBB" class="colors yellow"> 
       <div class="button dropdown"> 
       <select id="esporteselectora">
          <option value="default_nenhum">Escolha uma linha</option>
