--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <select id="esporteselectora">
          <option value="default_nenhum">Escolha uma linha</option>
         
-         <option value="eliminacao">Eliminação BBB</option>
+         <option value="eliminacao">BBB - Percentual eliminação da Karol Conka</option>
         
       </select>
     </div>
@@ -49,10 +49,15 @@
   <div id="eliminacao" class="colors blue"> 
     <div class="button dropdown"> 
     <select id="winnerselector1">
-       <option value="default_nenhum">Escolha um vencedor</option>
-       <option value="Fiuk">Fiuk (2.90)</option>
-       <option value="Nego">Nego Di (2.90)</option>
-       <option value="Sarah">Sarah (2.90)</option>
+       <option value="default_nenhum">Qual o valor mais próximo do % de eliminação da Karol Conka</option>
+       <option value="99.5">99.5 (3.5)</option>
+       <option value="99.0">99.0 (3.5)</option>
+       <option value="98.5">98.5 (3.5)</option>
+       <option value="98.0">98.0 (3.5)</option>
+       <option value="97.5">97.5 (3.5)</option>
+       <option value="97.0">97.0 (3.5)</option>
+       <option value="96.5">96.5 (3.5)</option>
+       <option value="96.0">96.0 (3.5)</option>
     </select>
   </div>
 </div>
@@ -69,9 +74,14 @@
 
 <div class="output">
   
-  <div id="Fiuk" class="prelim green">!bbb fiuk 200</div>
-  <div id="Nego" class="prelim green">!bbb nego_di 200</div>
-  <div id="Sarah" class="prelim green">!bbb sarah 200</div>
+  <div id="99.5" class="prelim green">!bbb 99.5 200</div>
+  <div id="99.0" class="prelim green">!bbb 99.0 200</div>
+  <div id="98.5" class="prelim green">!bbb 98.5 200</div>
+  <div id="98.0" class="prelim green">!bbb 98.0 200</div>
+  <div id="97.5" class="prelim green">!bbb 97.5 200</div>
+  <div id="97.0" class="prelim green">!bbb 97.0 200</div>
+  <div id="96.5" class="prelim green">!bbb 96.5 200</div>
+  <div id="96.0" class="prelim green">!bbb 96.0 200</div>
   
 </div>
   
