--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <img src="https://i.ibb.co/k0cpphK/betting-bad-1.png" alt="odds" width=275 height=183>
 </div>
 <div>
-  <img src="https://i.ibb.co/4KP6Wdt/20210216-bbb.jpg" alt="odds">
+  <img src="https://i.ibb.co/ss0KVV1/20210223-bbb.jpg" alt="odds">
 </div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
@@ -50,14 +50,14 @@
     <div class="button dropdown"> 
     <select id="winnerselector1">
        <option value="default_nenhum">Qual o valor mais próximo do % de eliminação da Karol Conka</option>
-       <option value="99.5">99.5 (3.5)</option>
-       <option value="99.0">99.0 (3.5)</option>
-       <option value="98.5">98.5 (3.5)</option>
-       <option value="98.0">98.0 (3.5)</option>
-       <option value="97.5">97.5 (3.5)</option>
-       <option value="97.0">97.0 (3.5)</option>
-       <option value="96.5">96.5 (3.5)</option>
-       <option value="96.0">96.0 (3.5)</option>
+       <option value="995">99.5% (3.5)</option>
+       <option value="990">99.0% (3.5)</option>
+       <option value="985">98.5% (3.5)</option>
+       <option value="980">98.0% (3.5)</option>
+       <option value="975">97.5% (3.5)</option>
+       <option value="970">97.0% (3.5)</option>
+       <option value="965">96.5% (3.5)</option>
+       <option value="960">96.0% (3.5)</option>
     </select>
   </div>
 </div>
@@ -74,14 +74,14 @@
 
 <div class="output">
   
-  <div id="99.5" class="prelim green">!bbb 99.5 200</div>
-  <div id="99.0" class="prelim green">!bbb 99.0 200</div>
-  <div id="98.5" class="prelim green">!bbb 98.5 200</div>
-  <div id="98.0" class="prelim green">!bbb 98.0 200</div>
-  <div id="97.5" class="prelim green">!bbb 97.5 200</div>
-  <div id="97.0" class="prelim green">!bbb 97.0 200</div>
-  <div id="96.5" class="prelim green">!bbb 96.5 200</div>
-  <div id="96.0" class="prelim green">!bbb 96.0 200</div>
+  <div id="995" class="prelim green">!bbb 99.5 200</div>
+  <div id="990" class="prelim green">!bbb 99.0 200</div>
+  <div id="985" class="prelim green">!bbb 98.5 200</div>
+  <div id="980" class="prelim green">!bbb 98.0 200</div>
+  <div id="975" class="prelim green">!bbb 97.5 200</div>
+  <div id="970" class="prelim green">!bbb 97.0 200</div>
+  <div id="965" class="prelim green">!bbb 96.5 200</div>
+  <div id="960" class="prelim green">!bbb 96.0 200</div>
   
 </div>
   
