--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <div>
   <img src="https://i.ibb.co/ss0KVV1/20210223-bbb.jpg" alt="odds">
 </div>
+<div>
+  <img src="https://i.ibb.co/4t6TZgD/20210227-ufc.jpg" alt="odds">
+</div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
   <select id="colorselector">
@@ -87,9 +90,9 @@
 </div>
   
 
-  <div id="CaceresCroom" class=colors blue> 
+  <div id="CaceresCroom" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector2>
+    <select id="winnerselector2">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Caceres">Alex Caceres (1.44)</option>
        <option value="Croom">Kevin Croom (2.87)</option>
@@ -97,9 +100,9 @@
   </div>
 </div>
 
-  <div id="MenifieldKnight" class=colors blue> 
+  <div id="MenifieldKnight" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector3>
+    <select id="winnerselector3">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Menifield">Alonzo Menifield (1.90)</option>
        <option value="Knight">William Knight (1.90)</option>
@@ -107,9 +110,9 @@
   </div>
 </div>
 
-  <div id="RosaSilva" class=colors blue> 
+  <div id="RosaSilva" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector4>
+    <select id="winnerselector4">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Rosa">Montana De La Rosa (2.10)</option>
        <option value="Silva">Mayra Bueno Silva (1.72)</option>
@@ -117,9 +120,9 @@
   </div>
 </div>
 
-  <div id="MunhozRivera" class=colors blue> 
+  <div id="MunhozRivera" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector5>
+    <select id="winnerselector5">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Munhoz">Pedro Munhoz (2.25)</option>
        <option value="Rivera">Jimmie Rivera (1.66)</option>
@@ -127,9 +130,9 @@
   </div>
 </div>
 
-  <div id="LawrenceCachero" class=colors blue> 
+  <div id="LawrenceCachero" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector6>
+    <select id="winnerselector6">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Lawrence">Ronnie Lawrence (1.61)</option>
        <option value="Cachero">Vince Cachero (2.37)</option>
@@ -137,9 +140,9 @@
   </div>
 </div>
 
-  <div id="HernandezMoises" class=colors blue> 
+  <div id="HernandezMoises" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector7>
+    <select id="winnerselector7">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Hernandez">Alexander Hernandez (1.53)</option>
        <option value="Moises">Thiago Moises (2.62)</option>
@@ -147,9 +150,9 @@
   </div>
 </div>
 
-  <div id="DavisMazo" class=colors blue> 
+  <div id="DavisMazo" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector8>
+    <select id="winnerselector8">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Davis">Alexis Davis (2.87)</option>
        <option value="Mazo">Sabina Mazo (1.44)</option>
@@ -157,9 +160,9 @@
   </div>
 </div>
 
-  <div id="JacobyGrishin" class=colors blue> 
+  <div id="JacobyGrishin" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector9>
+    <select id="winnerselector9">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Jacoby">Dustin Jacoby (1.57)</option>
        <option value="Grishin">Maxim Grishin (2.50)</option>
@@ -167,9 +170,9 @@
   </div>
 </div>
 
-  <div id="RozenstruikGane" class=colors blue> 
+  <div id="RozenstruikGane" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector10>
+    <select id="winnerselector10">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Rozenstruik">Jairzinho Rozenstruik (3.25)</option>
        <option value="Gane">Ciryl Gane (1.36)</option>
@@ -177,9 +180,9 @@
   </div>
 </div>
 
-  <div id="ReneauChiasson" class=colors blue> 
+  <div id="ReneauChiasson" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector11>
+    <select id="winnerselector11">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Reneau">Marion Reneau (2.75)</option>
        <option value="Chiasson">Macy Chiasson (1.47)</option>
@@ -187,9 +190,9 @@
   </div>
 </div>
 
-  <div id="KrylovAnkalaev" class=colors blue> 
+  <div id="KrylovAnkalaev" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector12>
+    <select id="winnerselector12">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Krylov">Nikita Krylov (3.50)</option>
        <option value="Ankalaev">Magomed Ankalaev (1.30)</option>
@@ -197,9 +200,9 @@
   </div>
 </div>
 
-  <div id="BrownOliveira" class=colors blue> 
+  <div id="BrownOliveira" class="colors blue"> 
     <div class="button dropdown"> 
-    <select id="winnerselector13>
+    <select id="winnerselector13">
        <option value="default_nenhum">Escolha um vencedor</option>
        <option value="Brown">Randy Brown (1.62)</option>
        <option value="Oliveira">Alex Oliveira (2.30)</option>
