--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
   <div id="esporteUFC" class="colors yellow"> 
       <div class="button dropdown"> 
-      <select id="esporteselectora">
+      <select id="esporteselectorb">
          <option value="default_nenhum">Escolha uma linha</option>
         
          <option value="CaceresCroom">Alex Caceres  X  Kevin Croom</option>
