--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img src="https://i.ibb.co/ss0KVV1/20210223-bbb.jpg" alt="odds">
 </div>
 <div>
-  <img src="https://i.ibb.co/4t6TZgD/20210227-ufc.jpg" alt="odds">
+  <img src="https://i.ibb.co/8xb8dGz/20210227-ufc.jpg" alt="odds">
 </div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
