--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <img src="https://i.ibb.co/k0cpphK/betting-bad-1.png" alt="odds" width=275 height=183>
 </div>
 <div>
-  <img src="https://i.ibb.co/ss0KVV1/20210223-bbb.jpg" alt="odds">
+  <img src="https://media.discordapp.net/attachments/789277317397872660/815962111015387186/20210302_bbb.JPG" alt="odds">
 </div>
 <div>
   <img src="https://i.ibb.co/8xb8dGz/20210227-ufc.jpg" alt="odds">
@@ -36,7 +36,7 @@
       <select id="esporteselectora">
          <option value="default_nenhum">Escolha uma linha</option>
         
-         <option value="eliminacao">BBB - Percentual eliminação da Karol Conka</option>
+         <option value="eliminacao">BBB - Eliminação</option>
         
       </select>
     </div>
@@ -76,15 +76,10 @@
   <div id="eliminacao" class="colors blue"> 
     <div class="button dropdown"> 
     <select id="winnerselector1">
-       <option value="default_nenhum">Qual o valor mais próximo do % de eliminação da Karol Conka</option>
-       <option value="995">99.5% (3.5)</option>
-       <option value="990">99.0% (3.5)</option>
-       <option value="985">98.5% (3.5)</option>
-       <option value="980">98.0% (3.5)</option>
-       <option value="975">97.5% (3.5)</option>
-       <option value="970">97.0% (3.5)</option>
-       <option value="965">96.5% (3.5)</option>
-       <option value="960">96.0% (3.5)</option>
+       <option value="default_nenhum">Quem será eliminado?</option>
+       <option value="lumena">Lumena (1.083)</option>
+       <option value="projota">Projota (7.00)</option>
+       <option value="arthur">Arthur (67.00)</option>
     </select>
   </div>
 </div>
@@ -221,14 +216,9 @@
 
 <div class="output">
   
-  <div id="995" class="prelim green">!bbb 99.5 200</div>
-  <div id="990" class="prelim green">!bbb 99.0 200</div>
-  <div id="985" class="prelim green">!bbb 98.5 200</div>
-  <div id="980" class="prelim green">!bbb 98.0 200</div>
-  <div id="975" class="prelim green">!bbb 97.5 200</div>
-  <div id="970" class="prelim green">!bbb 97.0 200</div>
-  <div id="965" class="prelim green">!bbb 96.5 200</div>
-  <div id="960" class="prelim green">!bbb 96.0 200</div>
+  <div id="lumena" class="prelim green">!bbb lumena 200</div>
+  <div id="projota" class="prelim green">!bbb projota 200</div>
+  <div id="arthur" class="prelim green">!bbb arthur 200</div>
   
   <div id="Caceres" class="prelim green">!CaceresCroom Caceres 200</div>
   <div id="Croom" class="prelim green">!CaceresCroom Croom 200</div>
