--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   <img src="https://i.ibb.co/k0cpphK/betting-bad-1.png" alt="odds" width=275 height=183>
 </div>
 <div>
+  <img src="https://media.discordapp.net/attachments/789277317397872660/815980938303373383/20210301_nba.JPG" alt="odds">
+</div>
+<div>
   <img src="https://media.discordapp.net/attachments/789277317397872660/815962111015387186/20210302_bbb.JPG" alt="odds">
 </div>
 <div>
-  <img src="https://media.discordapp.net/attachments/789277317397872660/815980938303373383/20210301_nba.JPG" alt="odds">
+  <img src="https://media.discordapp.net/attachments/789277317397872660/815997462727753728/20210306_ufc.JPG?width=1440&height=506" alt="odds">
 </div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
@@ -23,7 +26,7 @@
      <option value="default_nenhum">Escolha um evento</option>
      <option value="esporteNBA">NBA (01/03)</option>
      <option value="esporteBBB">BBB (02/03)</option>
-     <option value="esporteUFC">UFC (27/02)</option>
+     <option value="esporteUFC">UFC (06/03)</option>
   </select>
 </div>
 
@@ -66,18 +69,21 @@
       <select id="esporteselectorc">
          <option value="default_nenhum">Escolha uma linha</option>
         
-         <option value="CaceresCroom">Alex Caceres  X  Kevin Croom</option>
-         <option value="MenifieldKnight">Alonzo Menifield  X  William Knight</option>
-         <option value="RosaSilva">Montana De La Rosa  X  Mayra Bueno Silva</option>
-         <option value="MunhozRivera">Pedro Munhoz  X  Jimmie Rivera</option>
-         <option value="LawrenceCachero">Ronnie Lawrence  X  Vince Cachero</option>
-         <option value="HernandezMoises">Alexander Hernandez  X  Thiago Moises</option>
-         <option value="DavisMazo">Alexis Davis  X  Sabina Mazo</option>
-         <option value="JacobyGrishin">Dustin Jacoby  X  Maxim Grishin</option>
-         <option value="RozenstruikGane">Jairzinho Rozenstruik  X  Ciryl Gane</option>
-         <option value="ReneauChiasson">Marion Reneau  X  Macy Chiasson</option>
-         <option value="KrylovAnkalaev">Nikita Krylov  X  Magomed Ankalaev</option>
-         <option value="BrownOliveira">Randy Brown  X  Alex Oliveira</option>
+         <option value="UlbergNzechukwu">Carlos Ulberg  X  Kennedy Nzechukwu</option>
+         <option value="BautistaJones">Mario Bautista  X  Trevin Jones</option>
+         <option value="BradyMatthews">Sean Brady  X  Jake Matthews</option>
+         <option value="ElliottEspinosa">Tim Elliott  X  Jordan Espinosa</option>
+         <option value="MedicCruz">Uros Medic  X  Aalon Cruz</option>
+         <option value="CruzKenney">Dominick Cruz  X  Casey Kenney</option>
+         <option value="BenavidezAskarov">Joseph Benavidez  X  Askar Askarov</option>
+         <option value="Kara-FranceBontorin">Kai Kara-France  X  Rogerio Bontorin</option>
+         <option value="SouzaLemos">Livinha Souza  X  Amanda Lemos</option>
+         <option value="NunesAnderson">Amanda Nunes  X  Megan Anderson</option>
+         <option value="MakhachevDober">Islam Makhachev  X  Drew Dober</option>
+         <option value="BlachowiczAdesanya">Jan Blachowicz  X  Israel Adesanya</option>
+         <option value="YanSterling">Petr Yan  X  Aljamain Sterling</option>
+         <option value="SantosRakic">Thiago Santos  X  Aleksandar Rakic</option>
+
 
         
       </select>
@@ -180,6 +186,137 @@
   
   
   
+ <div id="UlbergNzechukwu" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector9">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Ulberg">Carlos Ulberg (1.45)</option>
+       <option value="Nzechukwu">Kennedy Nzechukwu (2.80)</option>
+    </select>
+  </div>
+</div>
+  <div id="BautistaJones" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector2">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Bautista">Mario Bautista (1.44)</option>
+       <option value="Jones">Trevin Jones (2.87)</option>
+    </select>
+  </div>
+</div>
+  <div id="BradyMatthews" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector10">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Brady">Sean Brady (1.45)</option>
+       <option value="Matthews">Jake Matthews (2.80)</option>
+    </select>
+  </div>
+</div>
+  <div id="ElliottEspinosa" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector11">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Elliott">Tim Elliott (2.00)</option>
+       <option value="Espinosa">Jordan Espinosa (1.80)</option>
+    </select>
+  </div>
+</div>
+  <div id="MedicCruz" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector12">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Medic">Uros Medic (1.58)</option>
+       <option value="Cruz">Aalon Cruz (2.40)</option>
+    </select>
+  </div>
+</div>
+  <div id="CruzKenney" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector13">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Cruz">Dominick Cruz (2.25)</option>
+       <option value="Kenney">Casey Kenney (1.66)</option>
+    </select>
+  </div>
+</div>
+  <div id="BenavidezAskarov" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector14">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Benavidez">Joseph Benavidez (2.10)</option>
+       <option value="Askarov">Askar Askarov (1.72)</option>
+    </select>
+  </div>
+</div>
+  <div id="Kara-FranceBontorin" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector15">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Kara-France">Kai Kara-France (1.66)</option>
+       <option value="Bontorin">Rogerio Bontorin (2.25)</option>
+    </select>
+  </div>
+</div>
+  <div id="SouzaLemos" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector16">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Souza">Livinha Souza (2.62)</option>
+       <option value="Lemos">Amanda Lemos (1.53)</option>
+    </select>
+  </div>
+</div>
+  <div id="NunesAnderson" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector17">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Nunes">Amanda Nunes (1083)</option>
+       <option value="Anderson">Megan Anderson (8.00)</option>
+    </select>
+  </div>
+</div>
+  <div id="MakhachevDober" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector18">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Makhachev">Islam Makhachev (1.28)</option>
+       <option value="Dober">Drew Dober (3.75)</option>
+    </select>
+  </div>
+</div>
+  <div id="BlachowiczAdesanya" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector19">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Blachowicz">Jan Blachowicz (3.00)</option>
+       <option value="Adesanya">Israel Adesanya (1.40)</option>
+    </select>
+  </div>
+</div>
+  <div id="YanSterling" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector20">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Yan">Petr Yan (1.80)</option>
+       <option value="Sterling">Aljamain Sterling (2.00)</option>
+    </select>
+  </div>
+</div>
+  <div id="SantosRakic" class="colors blue"> 
+    <div class="button dropdown"> 
+    <select id="winnerselector21">
+       <option value="default_nenhum">Escolha um vencedor</option>
+       <option value="Santos">Thiago Santos (2.37)</option>
+       <option value="Rakic">Aleksandar Rakic (1.61)</option>
+    </select>
+  </div>
+</div>
+
+  
+  
+  
+  
 </div>
 
 
@@ -211,6 +348,36 @@
   
   <div id="Hornets" class="prelim green">!HornetsBlazers Hornets 200</div>
   <div id="Blazers" class="prelim green">!HornetsBlazers Blazers 200</div>
+  
+  <div id="Ulberg" class="prelim green">!UlbergNzechukwu Ulberg 200</div>
+  <div id="Nzechukwu" class="prelim green">!UlbergNzechukwu Nzechukwu 200</div>
+  <div id="Bautista" class="prelim green">!BautistaJones Bautista 200</div>
+  <div id="Jones" class="prelim green">!BautistaJones Jones 200</div>
+  <div id="Brady" class="prelim green">!BradyMatthews Brady 200</div>
+  <div id="Matthews" class="prelim green">!BradyMatthews Matthews 200</div>
+  <div id="Elliott" class="prelim green">!ElliottEspinosa Elliott 200</div>
+  <div id="Espinosa" class="prelim green">!ElliottEspinosa Espinosa 200</div>
+  <div id="Medic" class="prelim green">!MedicCruz Medic 200</div>
+  <div id="Cruz" class="prelim green">!MedicCruz Cruz 200</div>
+  <div id="Cruz" class="prelim green">!CruzKenney Cruz 200</div>
+  <div id="Kenney" class="prelim green">!CruzKenney Kenney 200</div>
+  <div id="Benavidez" class="prelim green">!BenavidezAskarov Benavidez 200</div>
+  <div id="Askarov" class="prelim green">!BenavidezAskarov Askarov 200</div>
+  <div id="Kara-France" class="prelim green">!Kara-FranceBontorin Kara-France 200</div>
+  <div id="Bontorin" class="prelim green">!Kara-FranceBontorin Bontorin 200</div>
+  <div id="Souza" class="prelim green">!SouzaLemos Souza 200</div>
+  <div id="Lemos" class="prelim green">!SouzaLemos Lemos 200</div>
+  <div id="Nunes" class="prelim green">!NunesAnderson Nunes 200</div>
+  <div id="Anderson" class="prelim green">!NunesAnderson Anderson 200</div>
+  <div id="Makhachev" class="prelim green">!MakhachevDober Makhachev 200</div>
+  <div id="Dober" class="prelim green">!MakhachevDober Dober 200</div>
+  <div id="Blachowicz" class="prelim green">!BlachowiczAdesanya Blachowicz 200</div>
+  <div id="Adesanya" class="prelim green">!BlachowiczAdesanya Adesanya 200</div>
+  <div id="Yan" class="prelim green">!YanSterling Yan 200</div>
+  <div id="Sterling" class="prelim green">!YanSterling Sterling 200</div>
+  <div id="Santos" class="prelim green">!SantosRakic Santos 200</div>
+  <div id="Rakic" class="prelim green">!SantosRakic Rakic 200</div>
+
   
   
   
