--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <img src="https://media.discordapp.net/attachments/789277317397872660/815980938303373383/20210301_nba.JPG" alt="odds">
 </div>
 <div>
+  <img src="https://media.discordapp.net/attachments/789277317397872660/815962111015387186/20210302_bbb.JPG" alt="odds">
+</div>
+<div>
   <img src="https://media.discordapp.net/attachments/789277317397872660/815997462727753728/20210306_ufc.JPG?width=1440&height=506" alt="odds">
 </div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
@@ -27,7 +30,7 @@
   </select>
 </div>
 
-<div class="states" for="xyz">  
+<div class="states">  
 
   
    <div id="esporteBBB" class="colors yellow"> 
@@ -40,6 +43,43 @@
     </div>
  </div> 
   
+  <div id="esporteNBA" class="colors yellow"> 
+    <div class="button dropdown"> 
+      <select id="esporteselectorb">
+         <option value="default_nenhum">Escolha uma linha</option>
+         <option value="MavericksMagic">DAL Mavericks  X  ORL Magic</option>
+         <option value="Pacers76ers">IND Pacers  X  PHI 76ers</option>
+         <option value="NuggetsBulls">DEN Nuggets  X  CHI Bulls</option>
+         <option value="JazzPelicans">UTA Jazz  X  NO Pelicans</option>
+         <option value="NetsSpurs">BKN Nets  X  SA Spurs</option>
+         <option value="CavaliersRockets">CLE Cavaliers  X  HOU Rockets</option>
+         <option value="HornetsBlazers">CHA Hornets  X  POR Trail Blazers</option>
+      </select>
+    </div>
+ </div>  
+  
+  <div id="esporteUFC" class="colors yellow"> 
+    <div class="button dropdown"> 
+      <select id="esporteselectorc">
+         <option value="default_nenhum">Escolha uma linha</option>
+         <option value="UlbergNzechukwu">Carlos Ulberg  X  Kennedy Nzechukwu</option>
+         <option value="BautistaJones">Mario Bautista  X  Trevin Jones</option>
+         <option value="BradyMatthews">Sean Brady  X  Jake Matthews</option>
+         <option value="ElliottEspinosa">Tim Elliott  X  Jordan Espinosa</option>
+         <option value="MedicCruz">Uros Medic  X  Aalon Cruz</option>
+         <option value="CruzKenney">Dominick Cruz  X  Casey Kenney</option>
+         <option value="BenavidezAskarov">Joseph Benavidez  X  Askar Askarov</option>
+         <option value="Kara-FranceBontorin">Kai Kara-France  X  Rogerio Bontorin</option>
+         <option value="SouzaLemos">Livinha Souza  X  Amanda Lemos</option>
+         <option value="NunesAnderson">Amanda Nunes  X  Megan Anderson</option>
+         <option value="MakhachevDober">Islam Makhachev  X  Drew Dober</option>
+         <option value="BlachowiczAdesanya">Jan Blachowicz  X  Israel Adesanya</option>
+         <option value="YanSterling">Petr Yan  X  Aljamain Sterling</option>
+         <option value="SantosRakic">Thiago Santos  X  Aleksandar Rakic</option>
+        
+      </select>
+    </div>
+ </div> 
   
   
 </div>
